fixed exported recipe doesn't have any information of gadget's caption

--- a/Resources/views/Backend/recipe_export.xml.twig
+++ b/Resources/views/Backend/recipe_export.xml.twig
@@ -22,6 +22,7 @@
             <{{point}}>
                 {% for gadget in gadgets %}
                 <gadget name="{{ gadget.name }}">
+                    <parameter name="caption" value="{{ gadget.caption }}" />
                     {% for name, value in gadget.parameters %}
                     <parameter name="{{ name }}" value="{{ value | json_encode }}" />
                     {% endfor %}
